# icons_manager

./: .gitignore  DEVELOPMENT_WORKFLOW.md  FLEXIBLE_MILESTONES.md  REFACTORING_PLAN.md  REFACTORING_TASKS.md  config.json  exclude_rules.config  excluded_rules.config  folder_manager.code-workspace  holdrio.config  icon_manager.code-workspace  pyproject.toml  pyrightconfig.json  rsrg.config  run_tests.py
.github/ISSUE_TEMPLATE/: architecture-change.md  refactoring-task.md
dir_man/: __main__.py
dir_man/commands/: config_command.py
dir_man/data/: ini_writer.py  json_reader.py
dir_man/models/: config.py  container.py  rules.py
dir_man/resources/: folder_config.json  icon_config.json
dir_man/services/: factories.py  manager.py
icon_manager/: __main__.py  test.py
icon_manager/commands/: config_command.py
icon_manager/config/: app.py  base.py  config.py  creator.py  user.py
icon_manager/controller/: base.py  config.py  config_app.py  folder.py  icons.py  projects.py  search.py
icon_manager/crawler/: crawler.py  filters.py  options.py
icon_manager/data/: base.py  ini_source.py  ini_writer.py  json_source.py
icon_manager/handler/: desktop_ini.py  icon_config.py
icon_manager/helpers/: decorator.py  environment.py  generate.py  logs.py  path.py  resource.py  string.py  user_inputs.py
icon_manager/interfaces/: actions.py  builder.py  (+4 more)
tests/: test_app_config.py  test_app_service.py  test_config_service.py  test_desktop_controller.py  test_helpers.py  test_library_controller.py  test_rule_factory.py  test_rule_manager.py  test_rules_apply_controller.py  test_service_decomposition.py  test_user_config.py
(+61 files in other folders)
