[tool.poetry]
name = "folder_manager"
version = "0.1.0"
description = "Adds icons to specified folders"
authors = ["Erich Raschle <erichraschle@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
